force-app/main/default/objects/Dummy34__c/Dummy34__c.object-meta.xml
<CustomObject>
    <label>Dummy34</label>
    <nameField>
        <label>Dummy34 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy34</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>