force-app/main/default/objects/Dummy34__c/fields/FooBar025__c.field-meta.xml
<CustomField>
    <fullName>FooBar025__c</fullName>
    <label>FooBar025</label>
    <length>255</length>
    <type>Text</type>
</CustomField>