force-app/main/default/objects/Dummy34__c/fields/FooBar163__c.field-meta.xml
<CustomField>
    <fullName>FooBar163__c</fullName>
    <label>FooBar163</label>
    <length>255</length>
    <type>Text</type>
</CustomField>