force-app/main/default/objects/Dummy34__c/fields/FooBar167__c.field-meta.xml
<CustomField>
    <fullName>FooBar167__c</fullName>
    <label>FooBar167</label>
    <length>255</length>
    <type>Text</type>
</CustomField>